<resources>
    <string name="app_name">Student Record Keeping System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Students</string>
    <string name="menu_gallery">Courses</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hello">Hello World, MyApp!</string>
    <string name="title">Students List</string>
    <string name="roll_no">Enter Rollno: </string>
    <string name="name">Enter Name: </string>
    <string name="marks">Enter Marks: </string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="view_all">View All</string>
    <string name="show_info">Show Information</string>
    <string name="city">City</string>
    <string name="cellNo">Cell Number</string>
    <string name="studyProgram">Study Program</string>
    <string name="title_activity_course_list">CourseListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enroll_student">Enroll Student</string>
    <string name="list_test">List Test</string>
    <string name="test_list">Test List</string>
    <string name="update">Update</string>
    <string name="go_back">Go Back</string>
</resources>
